force-app/main/default/objects/BD_Meeting__c/BD_Meeting__c.object-meta.xml
<CustomObject>
    <label>BD Meeting</label>
    <nameField>
        <label>BD Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BD Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>