force-app/main/default/objects/BD_Meeting__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Origination_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>