force-app/main/default/objects/BD_Meeting__c/fields/BD__c.field-meta.xml
<CustomField>
    <fullName>BD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BD</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BD_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>