force-app/main/default/objects/BD_Meeting__c/fields/Estimated_Fees__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Fees__c</fullName>
    <label>Estimated Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>