force-app/main/default/objects/BD_Meeting__c/fields/Estimated_Potential_Opportunity_Fee__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Potential_Opportunity_Fee__c</fullName>
    <label>Estimated Potential Opportunity Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>