force-app/main/default/objects/BD_Meeting__c/fields/First_BD_Meeting__c.field-meta.xml
<CustomField>
    <fullName>First_BD_Meeting__c</fullName>
    <label>First BD Meeting</label>
    <type>Date</type>
</CustomField>