force-app/main/default/objects/BD_Meeting__c/fields/First_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Meeting_Date__c</fullName>
    <label>First Meeting Date</label>
    <type>Date</type>
</CustomField>