force-app/main/default/objects/BD_Meeting__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Origination_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>