force-app/main/default/objects/BD_Meeting__c/fields/Meeting_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meeting Attendee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Origination_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>