force-app/main/default/objects/BD_Meeting__c/fields/Meeting_Declined_Reason__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Declined_Reason__c</fullName>
    <label>Meeting Declined Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Meeting_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Too small</fullName>
            </value>
            <value>
                <fullName>Don&apos;t offer services</fullName>
            </value>
            <value>
                <fullName>No capacity</fullName>
            </value>
            <value>
                <fullName>Not now</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>