force-app/main/default/objects/BD_Meeting__c/fields/Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type__c</fullName>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cross-Sell</fullName>
            </value>
            <value>
                <fullName>Exploratory</fullName>
            </value>
            <value>
                <fullName>Origination</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>